fix: minor fixes to make the walkthrough mostly functional
fixed the styling to make sure that the cuiz game page is scrollable if its content overflows, and made the blitz mode fully functional. All these changes are to make this part of the app testable by select users

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -84,7 +84,8 @@
     // Z-levels
     --z-base: 1;
     --z-dialog: 4;
-    --z-toast: 3;
+    --z-toast: 5;
+    --z-home: 2;
 
     // Grid Properties
     --grid-offset: 1.5rem;
